--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,28 +1,30 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: Deploy Vite App to EC2
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  deploy:
     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 22.x
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build Vite App
+      run: npm run build
+
+    - name: Copy build to nginx folder
+      run: |
+        sudo rm -rf /var/www/html/*
+        sudo cp -r dist/* /var/www/html/
